crates/kestrel-hub/tests/snapshots/snapshots__audit_log_type_text_redacted.snap
---
source: crates/kestrel-hub/tests/snapshots.rs
expression: json
---
{
  "args": "len=29",
  "duration_ms": 12,
  "error": null,
  "node_id": "macstudio",
  "op": "type_text",
  "status": "ok",
  "ts": "<REDACTED>",
  "ts_unix": "<REDACTED>"
}
