crates/kestrel-hub/tests/snapshots/snapshots__index_anonymous.snap
---
source: crates/kestrel-hub/tests/snapshots.rs
expression: normalize_html(&html)
---
<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Kestrel</title><link rel="stylesheet" href="/assets/dashboard.css"><script src="/assets/htmx.min.js"></script><script src="/assets/htmx-sse.js"></script></head><body><main><header><span>Nodes</span><span class="count">0</span><span class="auth"><form method="post" action="/logout"><button class="linkish" type="submit">Sign out</button></form></span></header><table hx-ext="sse" sse-connect="/sse"><tbody sse-swap="nodes"><tr><td class="empty" colspan="6">no nodes</td></tr></tbody></table><form class="addnode" method="post" action="/ui/nodes"><input type="text" name="node_id" placeholder="node id" required><input type="text" name="address" placeholder="host:port" required><button type="submit">Add node</button></form><header class="subhead"><span>Layout</span><span class="count">0</span></header><form class="addlayout" method="post" action="/ui/layout"><input type="text" name="node_id" placeholder="node id" required><input type="number" name="col" placeholder="col" required><input type="number" name="row" placeholder="row" required><button type="submit">Set layout</button></form></main></body></html>
